--- a/views/peeps/index.erb
+++ b/views/peeps/index.erb
@@ -1,5 +1,7 @@
 <ul>
   <% @peeps.each do |peep| %>
-    <li><%= peep.text %></li>
+    <li class='peep'><%= peep.text %><br>
+    <%= peep.timestamp %>
+    </li>
   <% end %>
 </ul>
